Fixed glitchy button
Button was getting too long for some of the titles, changed the
white-space so it would wrap

--- a/Calculator.css
+++ b/Calculator.css
@@ -47,6 +47,7 @@ em{
     margin-right: auto;
     display: block;
     margin-bottom:30px;
+    white-space: normal;
 }
 .btn{
     font-weight: 700;
